add block headers

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a style="margin-left: 10px">Home</a>
         <a style="margin-left: 10px">Manage Booking</a>
     </div>
-    <div class="main-body border"> 
+    <div class="main-body"> 
         <div id="search-box" class="border">
                 <div class="block-header"  style="display: inline-flex;"> 
                     <p>New Booking</p>
@@ -111,10 +111,14 @@
         </div>
         <div class="right-side">
             <div class="annoucement border">
-                <h5>Announcement</h5>
+                    <div class="block-header"  style="display: inline-flex;"> 
+                        <p>Annoucement</p>
+                    </div>
             </div>
             <div class="personal-booking border">
-                <h5>My Personal Booking</h5>
+                    <div class="block-header"  style="display: inline-flex;"> 
+                        <p>My Personal Booking</p>
+                    </div>
             </div>
         </div>
 
