remove duplicate reviewAnswers() and 1 search avail button

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                         <input type="date" readonly>
                     </div>
                     <div id="search-button">
-                        <button type="button" class="btn btn-outline-primary btn-sm" onclick="reviewAnswers()">Search Availability</button>
-                        <a class="btn btn-outline-primary btn-sm" onclick="reviewAnswers(); return false;">Go to Google</a>
+                        <!-- <button type="button" class="btn btn-outline-primary btn-sm" onclick="reviewAnswers()">Search Availability</button> -->
+                        <a class="btn btn-outline-primary btn-sm" onclick="reviewAnswers(); return false;">Search Availability2</a>
                     </div>
                 </div>
         </div>
