added flow pages

--- a/end.html
+++ b/end.html
@@ -10,10 +10,7 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
-    <div id="search-button">
-        <a class="btn btn-outline-primary btn-sm" onclick="goToTask(); return false;">Go to task</a>
-    </div>
+    <h1>Bye World</h1>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="append-html.js"></script>
