each pretask shows which task it is

--- a/task3pre.html
+++ b/task3pre.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <h1>TASK 3</h1>
     <div id="search-button">
         <a class="btn btn-outline-primary btn-sm" onclick="goToTask3(); return false;">Go to task</a>
     </div>
