--- a/task2pre.html
+++ b/task2pre.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <h1>TASK 2</h1>
     <div id="search-button">
         <a class="btn btn-outline-primary btn-sm" onclick="goToTask2(); return false;">Go to task</a>
     </div>
