--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <div>
                             <p>Facilities/Resources Type</p>
                             <p>Please select one facility type</p>
-                            <div class="checkbox-list" style="display:inline-flex;">
+                            <div class="checkbox-list" id="type-checkbox-list"style="display:inline-flex;">
                                 <div class="custom-control custom-checkbox">
                                     <input type="checkbox" class="custom-control-input" id="defaultUnchecked">
                                     <label class="custom-control-label" for="defaultUnchecked">Room 1</label>
