apply DRY to reviewAnswers()

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <input type="date" readonly>
                     </div>
                     <div id="search-button">
-                        <a class="btn btn-outline-primary btn-sm" onclick="reviewAnswers(); return false;">Search Availability</a>
+                        <a class="btn btn-outline-primary btn-sm" onclick="reviewAnswers(1); return false;">Search Availability</a>
                     </div>
                 </div>
         </div>
