--- a/index3.html
+++ b/index3.html
@@ -113,7 +113,7 @@
                         <input type="date" readonly>
                     </div>
                     <div id="search-button">
-                        <a class="btn btn-outline-primary btn-sm" onclick="reviewAnswers3(); return false;">Search Availability</a>
+                        <a class="btn btn-outline-primary btn-sm" onclick="reviewAnswers(3); return false;">Search Availability</a>
                     </div>
                 </div>
         </div>
