add task description to right side of screen

--- a/index.html
+++ b/index.html
@@ -242,14 +242,16 @@
         <div class="right-side">
             <div class="annoucement border">
                 <div class="block-header" style="display: inline-flex;">
-                    <p>Annoucement</p>
+                    <p>Task Description</p>
+                </div>
+                <div style="display: inline-flex;">
+                    erofjoerifjoerivio erhvjoirvjioerhviuervi oehrvuijerovihervioejrov oerhvoiwerjvopijervuij eriovjerioveoprvkwwec ojfgervjervneui vnevnierfje
                 </div>
             </div>
-            <div class="personal-booking border">
+            <!--div class="personal-booking border">
                 <div class="block-header" style="display: inline-flex;">
                     <p>My Personal Booking</p>
-                </div>
-            </div>
+                </div> -->
         </div>
 
     </div>
