added create room function

--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
                     <p>Facility/Resource(s)*:</p>
                     <div style="height: 400px; overflow: auto;">
                         <div class="checkbox-list" id="Room-options" style="display: none;">
+                            <script src="createroom.js"></script>
+                            <script> createRooms();</script>
                             <div class="custom-control custom-checkbox location-locationA">
                                 <input type="checkbox" class="custom-control-input parent-Room-options location-locationA" id="defaultUnchecked3-1">
                                 <label class="custom-control-label" for="defaultUnchecked3-1">Room 1</label>
