add more timing options

--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
                             <option>12</option>
                             <option>13</option>
                             <option>14</option>
+                            <option>15</option>
+                            <option>16</option>
+                            <option>17</option>
+                            <option>18</option>
+                            <option>19</option>
+                            <option>20</option>
                         </select>
                         <button type="button" class="close" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
@@ -120,6 +126,12 @@
                             <option>12</option>
                             <option>13</option>
                             <option>14</option>
+                            <option>15</option>
+                            <option>16</option>
+                            <option>17</option>
+                            <option>18</option>
+                            <option>19</option>
+                            <option>20</option>
                         </select>
                         <button type="button" class="close" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
