changed to real rooms and locations

--- a/index.html
+++ b/index.html
@@ -34,20 +34,24 @@
                         <p style="font-size: 12px;">Please select one facility type</p>
                         <div class="checkbox-list" id="type-checkbox-list" style="display:inline-flex;">
                             <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="typeA">
-                                <label class="custom-control-label" for="typeA">Type A</label>
+                                <input type="checkbox" class="custom-control-input" id="StudyRoom">
+                                <label class="custom-control-label" for="StudyRoom">Study Room</label>
                             </div>
                             <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="typeB">
-                                <label class="custom-control-label" for="typeB">Type B</label>
+                                <input type="checkbox" class="custom-control-input" id="ConferenceRoom">
+                                <label class="custom-control-label" for="ConferenceRoom">Conference Room</label>
                             </div>
                             <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="typeC">
-                                <label class="custom-control-label" for="typeC">Type C</label>
+                                <input type="checkbox" class="custom-control-input" id="MusicRoom">
+                                <label class="custom-control-label" for="MusicRoom">Music Room</label>
                             </div>
                             <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="typeD">
-                                <label class="custom-control-label" for="typeD">Type D</label>
+                                <input type="checkbox" class="custom-control-input" id="PracticeRoom">
+                                <label class="custom-control-label" for="PracticeRoom">Practice Room</label>
+                            </div>
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="OpenSpace">
+                                <label class="custom-control-label" for="OpenSpace">Open Space</label>
                             </div>
 
                         </div>
@@ -59,26 +63,21 @@
                     <div style="height: 60px; overflow: auto;">
                         <div class="checkbox-list" id="Location-options">
                             <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="anyLocation">
-                                <label class="custom-control-label" for="anyLocation">Any Location</label>
+                                <input type="checkbox" class="custom-control-input" id="anyBuilding">
+                                <label class="custom-control-label" for="anyBuilding">Any Building</label>
                             </div>
                             <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="locationA">
-                                <label class="custom-control-label" for="locationA">Location A</label>
+                                <input type="checkbox" class="custom-control-input" id="BuildingA">
+                                <label class="custom-control-label" for="BuildingA">Building A</label>
                             </div>
                             <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="locationB">
-                                <label class="custom-control-label" for="locationB">Location B</label>
+                                <input type="checkbox" class="custom-control-input" id="BuildingB">
+                                <label class="custom-control-label" for="BuildingB">Building B</label>
                             </div>
                             <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="locationC">
-                                <label class="custom-control-label" for="locationC">Location C</label>
+                                <input type="checkbox" class="custom-control-input" id="BuildingC">
+                                <label class="custom-control-label" for="BuildingC">Building C</label>
                             </div>
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="locationD">
-                                <label class="custom-control-label" for="locationD">Location D</label>
-                            </div>
-
                         </div>
                     </div>
                 </div>
