--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                 </div>
                 <div id="Date" style="display: inline-flex;">
                     <p>Date</p>
-                    <input type="date" />
+                    <input type="date" id="startDate"/>
                     <p>to:</p>
-                    <input type="date" />
+                    <input type="date" id="endDate"/>
                 </div>
                 <div></div>
                 <div id="Timing" style="display: inline-flex; margin-top: 20px;">
