--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,6 @@
         <div id="search-box" class="border">
             <div class="block-header" style="display: inline-flex;">
                 <p>New Booking</p>
-                <a href="#">Save Preference</a>
             </div>
             <div style="margin: 10px">
                 <div id="Facilities/Resources Type">
@@ -89,16 +88,12 @@
                             <script>createRooms();</script>
                         </div>
                     </div>
-                    <p style="font-size: 12px;">
-                        *SRC: Stephen Riady Centre, TP: Town Plaza, ERC: Education Resource
-                        Centre
-                    </p>
                 </div>
                 <div id="Date" style="display: inline-flex;">
                     <p>Date</p>
-                    <input type="date" />
+                    <input type="date" id="startDate" />
                     <p>to:</p>
-                    <input type="date" />
+                    <input type="date" id="endDate" />
                 </div>
                 <div></div>
                 <div id="Timing" style="display: inline-flex; margin-top: 20px;">
@@ -122,9 +117,6 @@
                         <option>21:00</option>
                         <option>22:00</option>
                     </select>
-                    <button type="button" class="close" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
                     <label for="start-time-select">to:</label>
                     <select class="form-control-sm" id="end-time-select" style="width: 80px;">
                         <option>7:00</option>
@@ -144,9 +136,6 @@
                         <option>21:00</option>
                         <option>22:00</option>
                     </select>
-                    <button type="button" class="close" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
                 </div>
                 <div id="search-button">
                     <a class="btn btn-outline-primary btn-sm" onclick="reviewAnswers(2); return false;">
