add task description to UI

--- a/Trial 1/index2.html
+++ b/Trial 1/index2.html
@@ -148,17 +148,14 @@
         <div class="right-side">
             <div class="annoucement border">
                 <div class="block-header" style="display: inline-flex;">
-                    <p>Annoucement</p>
+                    <p>Task Description</p>
+                </div>
+                <div style="display: inline-flex;">
+                    <p> Check if <b>room BP3</b> which is of <b>Practice Room Type</b> and in <b>Building B</b> is free on <b>01/20/2020</b> from <b>08:00 to 14:00</b>. </p>
                 </div>
             </div>
-            <div class="personal-booking border">
-                <div class="block-header" style="display: inline-flex;">
-                    <p>My Personal Booking</p>
-                </div>
-            </div>
-        </div>
 
-    </div>
+        </div>
 
     </div>
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
