--- a/Trial 1/index.html
+++ b/Trial 1/index.html
@@ -146,13 +146,10 @@
         <div class="right-side">
             <div class="annoucement border">
                 <div class="block-header" style="display: inline-flex;">
-                    <p>Annoucement</p>
+                    <p>Task Description</p>
                 </div>
-            </div>
-            <div class="personal-booking border">
-                <div class="block-header" style="display: inline-flex;">
-                    <p>My Personal Booking</p>
-                </div>
+                <div style="display: inline-flex;">
+                    <p> Check if <b>room AC10</b> which is of <b>Conference Room Type</b> and in <b>Building A</b> is free on <b>01/15/2020</b> from <b>14:00 to 17:00</b>. </p>
             </div>
         </div>
 
