--- a/Trial 1/index3.html
+++ b/Trial 1/index3.html
@@ -148,17 +148,14 @@
         <div class="right-side">
             <div class="annoucement border">
                 <div class="block-header" style="display: inline-flex;">
-                    <p>Annoucement</p>
+                    <p>Task Description</p>
+                </div>
+                <div style="display: inline-flex;">
+                    <p> Check if <b>room CO18</b> which is of <b>Open Space Type</b> and in <b>Building C</b> is free on <b>12/25/2019</b> from <b>13:00 to 15:00</b>. </p>
                 </div>
             </div>
-            <div class="personal-booking border">
-                <div class="block-header" style="display: inline-flex;">
-                    <p>My Personal Booking</p>
-                </div>
-            </div>
-        </div>
 
-    </div>
+        </div>
 
     </div>
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
