--- a/Trial 1/task1pre.html
+++ b/Trial 1/task1pre.html
@@ -10,9 +10,13 @@
 </head>
 
 <body>
-    <h1>TASK 1</h1>
-    <div id="search-button">
-        <a class="btn btn-outline-primary btn-sm" onclick="goToTask1(); return false;">Go to task</a>
+    <div id="description">
+        <h1 style>TASK 1</h1>
+
+        <p> Check if <b>room AC10</b> which is of <b>Conference Room Type</b> and in <b>Building A</b> is free on <b>01/15/2020</b> from <b>14:00 to 17:00</b>. </p>
+        <div  class="taskButton">
+            <a class="btn btn-outline-primary btn-lg" onclick="goToTask1(); return false;">Go to task</a>
+        </div>
     </div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
