--- a/Trial 1/task2pre.html
+++ b/Trial 1/task2pre.html
@@ -10,10 +10,14 @@
 </head>
 
 <body>
-    <h1>TASK 2</h1>
-    <div id="search-button">
-        <a class="btn btn-outline-primary btn-sm" onclick="goToTask2(); return false;">Go to task</a>
+    <div id="description">
+        <h1 style>TASK 2</h1>
+
+        <p> Check if <b>room BP3</b> which is of <b>Practice Room Type</b> and in <b>Building B</b> is free on <b>01/20/2020</b> from <b>08:00 to 14:00</b>. </p><div  class="taskButton">
+            <a class="btn btn-outline-primary btn-lg" onclick="goToTask2(); return false;">Go to task</a>
+        </div>
     </div>
+        
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="append-html.js"></script>
