--- a/Trial 1/task3pre.html
+++ b/Trial 1/task3pre.html
@@ -10,10 +10,15 @@
 </head>
 
 <body>
-    <h1>TASK 3</h1>
-    <div id="search-button">
-        <a class="btn btn-outline-primary btn-sm" onclick="goToTask3(); return false;">Go to task</a>
+    <div id="description">
+        <h1 style>TASK 3</h1>
+
+        <p> Check if <b>room CO18</b> which is of <b>Open Space Type</b> and in <b>Building C</b> is free on <b>12/25/2019</b> from <b>13:00 to 15:00</b>. </p>
+        <div  class="taskButton">
+            <a class="btn btn-outline-primary btn-lg" onclick="goToTask3(); return false;">Go to task</a>
+        </div>
     </div>
+
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="append-html.js"></script>
