modify sizing of date and time

--- a/Trial 1/index.html
+++ b/Trial 1/index.html
@@ -89,17 +89,15 @@
                         </div>
                     </div>
                 </div>
-                <div id="Date" style="display: inline-flex;">
-                    <p>Date</p>
-                    <input type="date" id="startDate"/>
-                    <p>to:</p>
-                    <input type="date" id="endDate"/>
+                <div id="Date" style="display: inline-flex; padding-top: 10px;">
+                    <p>Date:</p>
+                    <input type="date" id="startDate" style="margin-left: 10px; padding-left: 10px; height: 30px;"/>
                 </div>
                 <div></div>
                 <div id="Timing" style="display: inline-flex; margin-top: 20px;">
                     
                         <label for="start-time-select">Available Timing:</label>
-                        <select class="form-control-sm" id="start-time-select" style="width: 80px;">
+                        <select class="form-control-sm" id="start-time-select" style="width: 80px; margin-left: 5px; padding-left: 5px;">
                             <option>7:00</option>
                             <option>8:00</option>    
                             <option>9:00</option>
@@ -117,8 +115,8 @@
                             <option>21:00</option>
                             <option>22:00</option>
                         </select>
-                        <label for="start-time-select">to:</label>
-                        <select class="form-control-sm" id="end-time-select" style="width: 80px;">
+                        <label style="margin-left: 10px;" for="start-time-select">to:</label>
+                        <select class="form-control-sm" id="end-time-select" style="width: 80px; margin-left: 5px; padding-left: 5px;">
                             <option>7:00</option>
                             <option>8:00</option>    
                             <option>9:00</option>
