--- a/Trial 1/index.html
+++ b/Trial 1/index.html
@@ -59,7 +59,7 @@
                 <hr>
                 <div id="Location">
                     <p>Location</p>
-                    <div style="height: 60px; overflow: auto;">
+                    <div style="height: 70px; overflow: auto;">
                         <div class="checkbox-list" id="Location-options">
                             <label class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
                                 <input type="checkbox" class="custom-control-input" id="anyBuilding">
@@ -136,7 +136,7 @@
                         </select>
                 </div>
                 <div id="search-button">
-                    <a class="btn btn-outline-primary btn-sm" onclick="reviewAnswers(1); return false;">Search
+                    <a class="btn btn-outline-primary btn" onclick="reviewAnswers(1); return false;">Search
                         Availability</a>
                 </div>
             </div>
