--- a/Trial 2/end.html
+++ b/Trial 2/end.html
@@ -10,8 +10,17 @@
 </head>
 
 <body>
-    <h1>Bye World</h1>
 
+    <div id="description">
+    
+        <p>You have completed Trial 1!</p>
+        <p>Enter this code once you return to qualtrics:</p>
+        <p>C1235271</p>
+        <div  class="taskButton">
+            <a class="btn btn-outline-primary btn-lg" onclick="">End</a>
+        </div>
+    </div>
+    
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="append-html.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
