--- a/Trial 1/index3.html
+++ b/Trial 1/index3.html
@@ -32,26 +32,26 @@
                         <p>Facilities/Resources Type</p>
                         <p style="font-size: 12px;">Please select one facility type</p>
                         <div class="checkbox-list" id="type-checkbox-list" style="display:inline-flex;flex-wrap:wrap;">
-                            <div class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
+                            <label class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
                                 <input type="checkbox" class="custom-control-input" id="StudyRoom">
                                 <label class="custom-control-label" for="StudyRoom">Study Room</label>
-                            </div>
-                            <div class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
+                            </label>
+                            <label class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
                                 <input type="checkbox" class="custom-control-input" id="ConferenceRoom">
                                 <label class="custom-control-label" for="ConferenceRoom">Conference Room</label>
-                            </div>
-                            <div class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
+                            </label>
+                            <label class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
                                 <input type="checkbox" class="custom-control-input" id="MusicRoom">
                                 <label class="custom-control-label" for="MusicRoom">Music Room</label>
-                            </div>
-                            <div class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
+                            </label>
+                            <label class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
                                 <input type="checkbox" class="custom-control-input" id="PracticeRoom">
                                 <label class="custom-control-label" for="PracticeRoom">Practice Room</label>
-                            </div>
-                            <div class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
+                            </label>
+                            <label class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
                                 <input type="checkbox" class="custom-control-input" id="OpenSpace">
                                 <label class="custom-control-label" for="OpenSpace">Open Space</label>
-                            </div>
+                            </label>
 
                         </div>
                     </div>
@@ -59,47 +59,45 @@
                 <hr>
                 <div id="Location">
                     <p>Location</p>
-                    <div style="height: 60px; overflow: auto;">
+                    <div style="height: 70px; overflow: auto;">
                         <div class="checkbox-list" id="Location-options">
-                            <div class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
+                            <label class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
                                 <input type="checkbox" class="custom-control-input" id="anyBuilding">
                                 <label class="custom-control-label" for="anyBuilding">Any Building</label>
-                            </div>
-                            <div class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
+                            </label>
+                            <label class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
                                 <input type="checkbox" class="custom-control-input" id="BuildingA">
                                 <label class="custom-control-label" for="BuildingA">Building A</label>
-                            </div>
-                            <div class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
+                            </label>
+                            <label class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
                                 <input type="checkbox" class="custom-control-input" id="BuildingB">
                                 <label class="custom-control-label" for="BuildingB">Building B</label>
-                            </div>
-                            <div class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
+                            </label>
+                            <label class="custom-control custom-checkbox" style="padding-left: 40px; padding-top: 5px;">
                                 <input type="checkbox" class="custom-control-input" id="BuildingC">
                                 <label class="custom-control-label" for="BuildingC">Building C</label>
-                            </div>
+                            </label>
                         </div>
                     </div>
                 </div>
                 <div id="Facility/Resource">
                     <p>Facility/Resource(s)*:</p>
-                    <div style="height: 120px; overflow: auto;">
+                    <div style="height: 140px; overflow: auto;">
                         <div class="checkbox-list" id="Room-options" style="display: none;">
                             <script src="createroom.js"></script>
                             <script>createRooms();</script>
                         </div>
                     </div>
                 </div>
-                <div id="Date" style="display: inline-flex;">
-                    <p>Date</p>
-                    <input type="date" id="startDate" />
-                    <p>to:</p>
-                    <input type="date" id="endDate" />
+                <div id="Date" style="display: inline-flex; padding-top: 10px;">
+                    <p>Date:</p>
+                    <input type="date" id="startDate" style="margin-left: 10px; padding-left: 10px; height: 30px;" />
                 </div>
                 <div></div>
                 <div id="Timing" style="display: inline-flex; margin-top: 20px;">
 
                     <label for="start-time-select">Available Timing:</label>
-                    <select class="form-control-sm" id="start-time-select" style="width: 80px;">
+                    <select class="form-control-sm" id="start-time-select" style="width: 80px; margin-left: 5px; padding-left: 5px;">
                         <option>7:00</option>
                         <option>8:00</option>
                         <option>9:00</option>
@@ -117,8 +115,8 @@
                         <option>21:00</option>
                         <option>22:00</option>
                     </select>
-                    <label for="start-time-select">to:</label>
-                    <select class="form-control-sm" id="end-time-select" style="width: 80px;">
+                    <label style="margin-left: 10px;" for="start-time-select">to:</label>
+                    <select class="form-control-sm" id="end-time-select" style="width: 80px; margin-left: 5px; padding-left: 5px;">
                         <option>7:00</option>
                         <option>8:00</option>
                         <option>9:00</option>
@@ -138,7 +136,7 @@
                     </select>
                 </div>
                 <div id="search-button">
-                    <a class="btn btn-outline-primary btn-sm" onclick="reviewAnswers(3); return false;">
+                    <a class="btn btn-outline-primary btn" onclick="reviewAnswers(3); return false;">
                         Search
                         Availability
                     </a>
