--- a/Trial 3/task2pre.html
+++ b/Trial 3/task2pre.html
@@ -10,10 +10,15 @@
 </head>
 
 <body>
-    <h1>TASK 2</h1>
-    <div id="search-button">
-        <a class="btn btn-outline-primary btn-sm" onclick="goToTask2(); return false;">Go to task</a>
+    <div id="description">
+        <h1 style>TASK 2</h1>
+
+        <p> Check if <b>room CS16, CS3 and CP2</b> which are in <b>Building C</b> are free on <b>12/20/2019</b> from <b>07:00 to 10:00</b>. </p>
+        <div class="taskButton">
+            <a class="btn btn-outline-primary btn-lg" onclick="goToTask2(); return false;">Go to task</a>
+        </div>
     </div>
+        
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="append-html.js"></script>
