--- a/Trial 4/task2pre.html
+++ b/Trial 4/task2pre.html
@@ -10,10 +10,15 @@
 </head>
 
 <body>
-    <h1>TASK 2</h1>
-    <div id="search-button">
-        <a class="btn btn-outline-primary btn-sm" onclick="goToTask2(); return false;">Go to task</a>
+    <div id="description">
+        <h1 style>TASK 2</h1>
+
+        <p> Check if <b>room BM10, BC15 and BS11</b> which are in <b>Building B</b> are free on <b>03/02/2020</b> from <b>08:00 to 11:00</b>. </p>
+        <div class="taskButton">
+            <a class="btn btn-outline-primary btn-lg" onclick="goToTask2(); return false;">Go to task</a>
+        </div>
     </div>
+        
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="append-html.js"></script>
