--- a/Trial 4/task3pre.html
+++ b/Trial 4/task3pre.html
@@ -10,10 +10,15 @@
 </head>
 
 <body>
-    <h1>TASK 3</h1>
-    <div id="search-button">
-        <a class="btn btn-outline-primary btn-sm" onclick="goToTask3(); return false;">Go to task</a>
+    <div id="description">
+        <h1 style>TASK 3</h1>
+
+        <p> Check if <b>room AS2, CS1 and BS7</b> which are of <b>Study Room Type</b> are free on <b>11/22/2019</b> from <b>07:00 to 11:00</b>. </p>
+        <div class="taskButton">
+            <a class="btn btn-outline-primary btn-lg" onclick="goToTask3(); return false;">Go to task</a>
+        </div>
     </div>
+
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="append-html.js"></script>
