provide endcode for trial 1 - 4, change room display order for trial 1 - 4

--- a/Trial 3/end.html
+++ b/Trial 3/end.html
@@ -15,7 +15,7 @@
     
         <p>You have completed Trial 3!</p>
         <p>Enter this code once you return to qualtrics:</p>
-        <p>C1235271</p>
+        <p>CBXHTXSL</p>
         <div  class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="">End</a>
         </div>
