--- a/Trial 2/end.html
+++ b/Trial 2/end.html
@@ -15,7 +15,7 @@
     
         <p>You have completed Trial 2!</p>
         <p>Enter this code once you return to qualtrics:</p>
-        <p>C1235271</p>
+        <p>CBXNTXLL</p>
         <div  class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="">End</a>
         </div>
