--- a/Trial 7/end.html
+++ b/Trial 7/end.html
@@ -4,13 +4,22 @@
 
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
     <title>Sample HTML5</title>
 </head>
 
 <body>
-    <h1>Bye World</h1>
+
+    <div id="description">
+
+        <p>You have completed Trial 5!</p>
+        <p>Enter this code once you return to qualtrics:</p>
+        <p>DDXNTXSL</p>
+        <div class="taskButton">
+            <a class="btn btn-outline-primary btn-lg" onclick="">End</a>
+        </div>
+    </div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="append-html.js"></script>
