--- a/Trial 7/task2pre.html
+++ b/Trial 7/task2pre.html
@@ -4,15 +4,18 @@
 
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
     <title>Sample HTML5</title>
 </head>
 
 <body>
-    <h1>TASK 2</h1>
-    <div id="search-button">
-        <a class="btn btn-outline-primary btn-sm" onclick="goToTask2(); return false;">Go to task</a>
+    <div id="description">
+        <h1 style>TASK 1</h1>
+        <p> Check if <b>room AO14</b> which is of <b>Open Space Type</b> and in <b>Building A</b> is free on <b>11/29/2019</b> from <b>20:00 to 21:00</b>. </p>
+        <div class="taskButton">
+            <a class="btn btn-outline-primary btn-lg" onclick="goToTask2(); return false;">Go to task</a>
+        </div>
     </div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
