--- a/Trial 7/index3.html
+++ b/Trial 7/index3.html
@@ -134,7 +134,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room BS13</b> which is of <b>Study Room Type</b> and in <b>Building B</b> is free on <b>12/31/2019</b> from <b>10:00 to 13:00</b>. </p>
+                    <p> Check if <b>room AS2, CS1 and BS7</b> which are of <b>Study Room Type</b> are free on <b>03/11/2020</b> from <b>11:00 to 15:00</b>. </p>
                 </div>
             </div>
 
