--- a/Trial 7/end.html
+++ b/Trial 7/end.html
@@ -13,9 +13,9 @@
 
     <div id="description">
 
-        <p>You have completed Trial 5!</p>
+        <p>You have completed Trial 7!</p>
         <p>Enter this code once you return to qualtrics:</p>
-        <p>DDXNTXSL</p>
+        <p>DDXHTXSL</p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="">End</a>
         </div>
