finish trial 8 reorder rooms of trials 5 - 8 to be in alphabetical order

--- a/Trial 8/end.html
+++ b/Trial 8/end.html
@@ -13,9 +13,9 @@
 
     <div id="description">
 
-        <p>You have completed Trial 5!</p>
+        <p>You have completed Trial 8!</p>
         <p>Enter this code once you return to qualtrics:</p>
-        <p>DDXNTXSL</p>
+        <p>DDXHTXLL</p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="">End</a>
         </div>
