--- a/Trial 8/index2.html
+++ b/Trial 8/index2.html
@@ -60,14 +60,14 @@
                 </div>
                 <div id="Facility/Resource">
                     <p>Facility/Resource(s)*:</p>
-                    <div style="height: 200px; overflow: auto;">
+                    <div style="height: 295px; overflow: auto;">
                         <!-- <div class="checkbox-list" id="Room-options" style="display: none;">
                             <script src="createroom.js"></script>
                             <script> createRooms();</script>
                         </div> -->
                         <div class="form-group">
                             <!-- <label for="exampleFormControlSelect2">Example multiple select</label> -->
-                            <select multiple class="form-control" id="Room-options" style="display: none; height: 175px; overflow: auto;">
+                            <select multiple class="form-control" id="Room-options" style="display: none; height: 275px; overflow: auto;">
                                 <script src="createroom.js"></script>
                                 <script>createRoomsList();</script>
                             </select>
@@ -134,7 +134,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room AO14</b> which is of <b>Open Space Type</b> and in <b>Building A</b> is free on <b>11/29/2019</b> from <b>20:00 to 21:00</b>. </p>
+                    <p> Check if <b>room BM10, BC15 and BS11</b> which are in <b>Building B</b> are free on <b>03/02/2020</b> from <b>08:00 to 11:00</b>. </p>
                 </div>
             </div>
 
