--- a/Trial 8/task1pre.html
+++ b/Trial 8/task1pre.html
@@ -12,8 +12,7 @@
 <body>
     <div id="description">
         <h1 style>TASK 1</h1>
-
-        <p> Check if <b>room BM10</b> which is of <b>Music Room Type</b> and in <b>Building B</b> is free on <b>02/24/2020</b> from <b>12:00 to 15:00</b>. </p>
+        <p> Check if <b>room CP10, CO20 and CM1</b> which are in <b>Building C</b> are free on <b>02/25/2020</b> from <b>14:00 to 15:00</b>. </p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask1(); return false;">Go to task</a>
         </div>
