--- a/Trial 8/task2pre.html
+++ b/Trial 8/task2pre.html
@@ -11,8 +11,8 @@
 
 <body>
     <div id="description">
-        <h1 style>TASK 1</h1>
-        <p> Check if <b>room AO14</b> which is of <b>Open Space Type</b> and in <b>Building A</b> is free on <b>11/29/2019</b> from <b>20:00 to 21:00</b>. </p>
+        <h1 style>TASK 2</h1>
+        <p> Check if <b>room BM10, BC15 and BS11</b> which are in <b>Building B</b> are free on <b>03/02/2020</b> from <b>08:00 to 11:00</b>. </p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask2(); return false;">Go to task</a>
         </div>
