changed all task dates to 5th Jan 2020

--- a/Trial 5/task3pre.html
+++ b/Trial 5/task3pre.html
@@ -12,7 +12,7 @@
 <body>
     <div id="description">
         <h1 style>TASK 3</h1>
-        <p> Check if <b>room BS13</b> which is of <b>Study Room Type</b> and in <b>Building B</b> is free on <b>12/31/2019</b> from <b>10:00 to 13:00</b>. </p>
+        <p> Check if <b>room BS13</b> which is of <b>Study Room Type</b> and in <b>Building B</b> is free on <b>5th Jan 2020</b> from <b>10:00 to 13:00</b>. </p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask3(); return false;">Go to task</a>
         </div>
