--- a/Trial_1/index2.html
+++ b/Trial_1/index2.html
@@ -149,7 +149,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room BP3</b> which is of <b>Practice Room Type</b> and in <b>Building B</b> is free on <b>01/20/2020</b> from <b>08:00 to 14:00</b>. </p>
+                    <p> Check if <b>room BP3</b> which is of <b>Practice Room Type</b> and in <b>Building B</b> is free on <b>5th Jan 2020</b> from <b>08:00 to 14:00</b>. </p>
                 </div>
             </div>
 
