--- a/Trial_2/index2.html
+++ b/Trial_2/index2.html
@@ -149,7 +149,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room CO14</b> which is of <b>Open Space Type</b> and in <b>Building C</b> is free on <b>11/25/2019</b> from <b>18:00 to 19:00</b>. </p>
+                    <p> Check if <b>room CO14</b> which is of <b>Open Space Type</b> and in <b>Building C</b> is free on <b>5th Jan 2020</b> from <b>18:00 to 19:00</b>. </p>
                 </div>
             </div>
 
