--- a/Trial 3/index2.html
+++ b/Trial 3/index2.html
@@ -149,7 +149,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room CS16, CS3 and CP2</b> which are in <b>Building C</b> are free on <b>12/20/2019</b> from <b>07:00 to 10:00</b>. </p>
+                    <p> Check if <b>room CS16, CS3 and CP2</b> which are in <b>Building C</b> are free on <b>5th Jan 2020</b> from <b>07:00 to 10:00</b>. </p>
                 </div>
             </div>
 
