--- a/Trial 3/task3pre.html
+++ b/Trial 3/task3pre.html
@@ -13,7 +13,7 @@
     <div id="description">
         <h1 style>TASK 3</h1>
 
-        <p> Check if <b>room AS5, AC10 and AM1</b> which are in <b>Building A</b> are free on <b>01/16/2020</b> from <b>13:00 to 14:00</b>. </p>
+        <p> Check if <b>room AS5, AC10 and AM1</b> which are in <b>Building A</b> are free on <b>5th Jan 2020</b> from <b>13:00 to 14:00</b>. </p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask3(); return false;">Go to task</a>
         </div>
