--- a/Trial 4/task3pre.html
+++ b/Trial 4/task3pre.html
@@ -13,7 +13,7 @@
     <div id="description">
         <h1 style>TASK 3</h1>
 
-        <p> Check if <b>room AS2, CS1 and BS7</b> which are of <b>Study Room Type</b> are free on <b>11/22/2019</b> from <b>07:00 to 11:00</b>. </p>
+        <p> Check if <b>room AS2, CS1 and BS7</b> which are of <b>Study Room Type</b> are free on <b>5th Jan 2020</b> from <b>07:00 to 11:00</b>. </p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask3(); return false;">Go to task</a>
         </div>
