--- a/Trial 5/task1pre.html
+++ b/Trial 5/task1pre.html
@@ -13,7 +13,7 @@
     <div id="description">
         <h1 style>TASK 1</h1>
 
-        <p> Check if <b>room BM10</b> which is of <b>Music Room Type</b> and in <b>Building B</b> is free on <b>02/24/2020</b> from <b>12:00 to 15:00</b>. </p>
+        <p> Check if <b>room BM10</b> which is of <b>Music Room Type</b> and in <b>Building B</b> is free on <b>5th Jan 2020</b> from <b>12:00 to 15:00</b>. </p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask1(); return false;">Go to task</a>
         </div>
