--- a/Trial 5/task2pre.html
+++ b/Trial 5/task2pre.html
@@ -12,7 +12,7 @@
 <body>
     <div id="description">
         <h1 style>TASK 2</h1>
-        <p> Check if <b>room AO14</b> which is of <b>Open Space Type</b> and in <b>Building A</b> is free on <b>11/29/2019</b> from <b>20:00 to 21:00</b>. </p>
+        <p> Check if <b>room AO14</b> which is of <b>Open Space Type</b> and in <b>Building A</b> is free on <b>5th Jan 2020</b> from <b>20:00 to 21:00</b>. </p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask2(); return false;">Go to task</a>
         </div>
