--- a/Trial_1/task2pre.html
+++ b/Trial_1/task2pre.html
@@ -13,7 +13,7 @@
     <div id="description">
         <h1 style>TASK 2</h1>
 
-        <p> Check if <b>room BP3</b> which is of <b>Practice Room Type</b> and in <b>Building B</b> is free on <b>01/20/2020</b> from <b>08:00 to 14:00</b>. </p>
+        <p> Check if <b>room BP3</b> which is of <b>Practice Room Type</b> and in <b>Building B</b> is free on <b>5th Jan 2020</b> from <b>08:00 to 14:00</b>. </p>
         <div  class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask2(); return false;">Go to task</a>
         </div>
