--- a/Trial_2/index3.html
+++ b/Trial_2/index3.html
@@ -149,7 +149,7 @@
                     <p>Task Description</p>
                 </div>
                 <div style="display: inline-flex;">
-                    <p> Check if <b>room AO1</b> which is of <b>Open Space Type</b> and in <b>Building A</b> is free on <b>12/31/2019</b> from <b>09:00 to 13:00</b>. </p>
+                    <p> Check if <b>room AO1</b> which is of <b>Open Space Type</b> and in <b>Building A</b> is free on <b>5th Jan 2020</b> from <b>09:00 to 13:00</b>. </p>
                 </div>
             </div>
 
