--- a/Trial_2/task1pre.html
+++ b/Trial_2/task1pre.html
@@ -13,7 +13,7 @@
     <div id="description">
         <h1 style>TASK 1</h1>
 
-        <p> Check if <b>room CM7</b> which is of <b>Music Room Type</b> and in <b>Building C</b> is free on <b>12/24/2019</b> from <b>11:00 to 15:00</b>. </p>
+        <p> Check if <b>room CM7</b> which is of <b>Music Room Type</b> and in <b>Building C</b> is free on <b>5th Jan 2020</b> from <b>11:00 to 15:00</b>. </p>
         <div  class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask1(); return false;">Go to task</a>
         </div>
