--- a/Trial_2/task2pre.html
+++ b/Trial_2/task2pre.html
@@ -13,7 +13,7 @@
     <div id="description">
         <h1 style>TASK 2</h1>
 
-        <p> Check if <b>room CO14</b> which is of <b>Open Space Type</b> and in <b>Building C</b> is free on <b>11/25/2019</b> from <b>18:00 to 19:00</b>. </p>
+        <p> Check if <b>room CO14</b> which is of <b>Open Space Type</b> and in <b>Building C</b> is free on <b>5th Jan 2020</b> from <b>18:00 to 19:00</b>. </p>
         <div class="taskButton">
             <a class="btn btn-outline-primary btn-lg" onclick="goToTask2(); return false;">Go to task</a>
         </div>
